Implement exclude unset from serde data, fix bool defaults

--- a/python/tests/example/cycles/tach.toml
+++ b/python/tests/example/cycles/tach.toml
@@ -5,46 +5,28 @@ exclude = [
     "tests",
     "venv",
 ]
-source_roots = [
-    ".",
-]
-exact = false
-disable_logging = false
-ignore_type_checking_imports = true
 forbid_circular_dependencies = true
 
 [[modules]]
 path = "domain_one"
 depends_on = [
-    { path = "domain_two", deprecated = false },
+    { path = "domain_two" },
 ]
-strict = false
 
 [[modules]]
 path = "domain_three"
 depends_on = [
-    { path = "domain_one", deprecated = false },
+    { path = "domain_one" },
 ]
-strict = false
 
 [[modules]]
 path = "domain_two"
 depends_on = [
-    { path = "domain_three", deprecated = false },
+    { path = "domain_three" },
 ]
-strict = false
 
 [[modules]]
 path = "leftover"
 depends_on = [
-    { path = "domain_one", deprecated = false },
+    { path = "domain_one" },
 ]
-strict = false
-
-[cache]
-backend = "disk"
-file_dependencies = []
-env_dependencies = []
-
-[external]
-exclude = []
