--- a/python/tests/example/multi_package/tach.toml
+++ b/python/tests/example/multi_package/tach.toml
@@ -1,11 +1,11 @@
 modules = [
-    { path = "myorg.pack_a", depends_on = [], strict = false },
-    { path = "myorg.pack_b", depends_on = [], strict = false },
-    { path = "myorg.pack_c", depends_on = [], strict = false },
-    { path = "myorg.pack_d", depends_on = [], strict = false },
-    { path = "myorg.pack_e", depends_on = [], strict = false },
-    { path = "myorg.pack_f", depends_on = [], strict = false },
-    { path = "myorg.pack_g", depends_on = [], strict = false },
+    { path = "myorg.pack_a", depends_on = [] },
+    { path = "myorg.pack_b", depends_on = [] },
+    { path = "myorg.pack_c", depends_on = [] },
+    { path = "myorg.pack_d", depends_on = [] },
+    { path = "myorg.pack_e", depends_on = [] },
+    { path = "myorg.pack_f", depends_on = [] },
+    { path = "myorg.pack_g", depends_on = [] },
 ]
 exclude = [
     ".*__pycache__",
@@ -23,15 +23,4 @@ source_roots = [
     "src/pack-f/src",
     "src/pack-g/src",
 ]
-exact = false
 disable_logging = true
-ignore_type_checking_imports = true
-forbid_circular_dependencies = false
-
-[cache]
-backend = "disk"
-file_dependencies = []
-env_dependencies = []
-
-[external]
-exclude = []
