Update docs and README

--- a/tach.toml
+++ b/tach.toml
@@ -7,10 +7,9 @@ exclude = [
     "tach.egg-info/",
     "venv/",
 ]
-source_roots = [
-    "python",
-]
+source_roots = ["python"]
 exact = true
+ignore_type_checking_imports = true
 forbid_circular_dependencies = true
 
 [[modules]]
@@ -20,17 +19,12 @@ strict = true
 
 [[modules]]
 path = "tach.__main__"
-depends_on = [
-    { path = "tach.start" },
-]
+depends_on = [{ path = "tach.start" }]
 strict = true
 
 [[modules]]
 path = "tach.cache"
-depends_on = [
-    { path = "tach" },
-    { path = "tach.filesystem" },
-]
+depends_on = [{ path = "tach" }, { path = "tach.filesystem" }]
 strict = true
 
 [[modules]]
@@ -45,10 +39,7 @@ strict = true
 
 [[modules]]
 path = "tach.check_external"
-depends_on = [
-    { path = "tach.extension" },
-    { path = "tach.utils" },
-]
+depends_on = [{ path = "tach.extension" }, { path = "tach.utils" }]
 
 [[modules]]
 path = "tach.cli"
@@ -86,9 +77,7 @@ strict = true
 
 [[modules]]
 path = "tach.core"
-depends_on = [
-    { path = "tach.constants" },
-]
+depends_on = [{ path = "tach.constants" }]
 strict = true
 
 [[modules]]
@@ -113,24 +102,17 @@ strict = true
 
 [[modules]]
 path = "tach.filesystem.git_ops"
-depends_on = [
-    { path = "tach.errors" },
-]
+depends_on = [{ path = "tach.errors" }]
 strict = true
 
 [[modules]]
 path = "tach.hooks"
-depends_on = [
-    { path = "tach.constants" },
-]
+depends_on = [{ path = "tach.constants" }]
 strict = true
 
 [[modules]]
 path = "tach.interactive"
-depends_on = [
-    { path = "tach.errors" },
-    { path = "tach.filesystem" },
-]
+depends_on = [{ path = "tach.errors" }, { path = "tach.filesystem" }]
 strict = true
 
 [[modules]]
@@ -182,9 +164,7 @@ strict = true
 
 [[modules]]
 path = "tach.start"
-depends_on = [
-    { path = "tach.cli" },
-]
+depends_on = [{ path = "tach.cli" }]
 strict = true
 
 [[modules]]
@@ -214,12 +194,7 @@ path = "tach.utils"
 depends_on = []
 
 [cache]
-file_dependencies = [
-    "python/tests/**",
-    "src/*.rs",
-]
+file_dependencies = ["python/tests/**", "src/*.rs"]
 
 [external]
-exclude = [
-    "pytest",
-]
+exclude = ["pytest"]
