add `use_regex_matching` config

--- a/python/tests/example/valid/tach.toml
+++ b/python/tests/example/valid/tach.toml
@@ -5,6 +5,8 @@ exclude = [
     "**/__pycache__/**",
     "**/*egg-info/**",
 ]
+
+use_regex_matching = false
 exact = true
 forbid_circular_dependencies = true
 
