--- a/tach.toml
+++ b/tach.toml
@@ -7,9 +7,10 @@ exclude = [
     "tach.egg-info/",
     "venv/",
 ]
-source_roots = ["python"]
+source_roots = [
+    "python",
+]
 exact = true
-ignore_type_checking_imports = true
 forbid_circular_dependencies = true
 
 [[modules]]
@@ -19,12 +20,17 @@ strict = true
 
 [[modules]]
 path = "tach.__main__"
-depends_on = [{ path = "tach.start" }]
+depends_on = [
+    { path = "tach.start" },
+]
 strict = true
 
 [[modules]]
 path = "tach.cache"
-depends_on = [{ path = "tach" }, { path = "tach.filesystem" }]
+depends_on = [
+    { path = "tach" },
+    { path = "tach.filesystem" },
+]
 strict = true
 
 [[modules]]
@@ -39,7 +45,10 @@ strict = true
 
 [[modules]]
 path = "tach.check_external"
-depends_on = [{ path = "tach.extension" }, { path = "tach.utils" }]
+depends_on = [
+    { path = "tach.extension" },
+    { path = "tach.utils" },
+]
 
 [[modules]]
 path = "tach.cli"
@@ -78,7 +87,9 @@ strict = true
 
 [[modules]]
 path = "tach.core"
-depends_on = [{ path = "tach.constants" }]
+depends_on = [
+    { path = "tach.constants" },
+]
 strict = true
 
 [[modules]]
@@ -103,17 +114,24 @@ strict = true
 
 [[modules]]
 path = "tach.filesystem.git_ops"
-depends_on = [{ path = "tach.errors" }]
+depends_on = [
+    { path = "tach.errors" },
+]
 strict = true
 
 [[modules]]
 path = "tach.hooks"
-depends_on = [{ path = "tach.constants" }]
+depends_on = [
+    { path = "tach.constants" },
+]
 strict = true
 
 [[modules]]
 path = "tach.interactive"
-depends_on = [{ path = "tach.errors" }, { path = "tach.filesystem" }]
+depends_on = [
+    { path = "tach.errors" },
+    { path = "tach.filesystem" },
+]
 strict = true
 
 [[modules]]
@@ -159,13 +177,23 @@ depends_on = [
 strict = true
 
 [[modules]]
+path = "tach.sarif"
+depends_on = [
+    { path = "tach" },
+    { path = "tach.utils" },
+]
+strict = true
+
+[[modules]]
 path = "tach.show"
 depends_on = []
 strict = true
 
 [[modules]]
 path = "tach.start"
-depends_on = [{ path = "tach.cli" }]
+depends_on = [
+    { path = "tach.cli" },
+]
 strict = true
 
 [[modules]]
@@ -193,19 +221,17 @@ strict = true
 [[modules]]
 path = "tach.utils"
 depends_on = [
-    { path = "tach.constants" },
     { path = "tach.colors" },
+    { path = "tach.constants" },
 ]
-
-[[modules]]
-path = "tach.sarif"
-depends_on = [
-    { path = "tach.utils" },
-]
-strict = true
 
 [cache]
-file_dependencies = ["python/tests/**", "src/*.rs"]
+file_dependencies = [
+    "python/tests/**",
+    "src/*.rs",
+]
 
 [external]
-exclude = ["pytest"]
+exclude = [
+    "pytest",
+]
