update tach toml

--- a/tach.toml
+++ b/tach.toml
@@ -1,18 +1,18 @@
 exclude = [
     "**/__pycache__/**",
-     "build/**",
-     "dist/**",
-     "docs/**",
-     "**/tests/**",
-     "tach.egg-info/**",
-     "venv/**",
+    "**/tests/**",
+    "build/**",
+    "dist/**",
+    "docs/**",
+    "tach.egg-info/**",
+    "venv/**",
 ]
-
-use_regex_matching = false
-source_roots = ["python"]
+source_roots = [
+    "python",
+]
 exact = true
-ignore_type_checking_imports = true
 forbid_circular_dependencies = true
+use_regex_matching = false
 
 [[modules]]
 path = "tach"
@@ -21,12 +21,17 @@ strict = true
 
 [[modules]]
 path = "tach.__main__"
-depends_on = [{ path = "tach.start" }]
+depends_on = [
+    { path = "tach.start" },
+]
 strict = true
 
 [[modules]]
 path = "tach.cache"
-depends_on = [{ path = "tach" }, { path = "tach.filesystem" }]
+depends_on = [
+    { path = "tach" },
+    { path = "tach.filesystem" },
+]
 strict = true
 
 [[modules]]
@@ -41,7 +46,11 @@ strict = true
 
 [[modules]]
 path = "tach.check_external"
-depends_on = [{ path = "tach.extension" }, { path = "tach.utils" }]
+depends_on = [
+    { path = "tach.extension" },
+    { path = "tach.utils" },
+]
+strict = true
 
 [[modules]]
 path = "tach.cli"
@@ -49,7 +58,6 @@ depends_on = [
     { path = "tach" },
     { path = "tach.cache" },
     { path = "tach.check" },
-    { path = "tach.check_external" },
     { path = "tach.colors" },
     { path = "tach.constants" },
     { path = "tach.core" },
@@ -60,6 +68,8 @@ depends_on = [
     { path = "tach.mod" },
     { path = "tach.parsing" },
     { path = "tach.report" },
+    { path = "tach.sarif" },
+    { path = "tach.check_external" },
     { path = "tach.show" },
     { path = "tach.sync" },
     { path = "tach.test" },
@@ -79,7 +89,9 @@ strict = true
 
 [[modules]]
 path = "tach.core"
-depends_on = [{ path = "tach.constants" }]
+depends_on = [
+    { path = "tach.constants" },
+]
 strict = true
 
 [[modules]]
@@ -104,17 +116,24 @@ strict = true
 
 [[modules]]
 path = "tach.filesystem.git_ops"
-depends_on = [{ path = "tach.errors" }]
+depends_on = [
+    { path = "tach.errors" },
+]
 strict = true
 
 [[modules]]
 path = "tach.hooks"
-depends_on = [{ path = "tach.constants" }]
+depends_on = [
+    { path = "tach.constants" },
+]
 strict = true
 
 [[modules]]
 path = "tach.interactive"
-depends_on = [{ path = "tach.errors" }, { path = "tach.filesystem" }]
+depends_on = [
+    { path = "tach.errors" },
+    { path = "tach.filesystem" },
+]
 strict = true
 
 [[modules]]
@@ -160,13 +179,23 @@ depends_on = [
 strict = true
 
 [[modules]]
+path = "tach.sarif"
+depends_on = [
+    { path = "tach" },
+    { path = "tach.utils" },
+]
+strict = true
+
+[[modules]]
 path = "tach.show"
 depends_on = []
 strict = true
 
 [[modules]]
 path = "tach.start"
-depends_on = [{ path = "tach.cli" }]
+depends_on = [
+    { path = "tach.cli" },
+]
 strict = true
 
 [[modules]]
@@ -193,10 +222,18 @@ strict = true
 
 [[modules]]
 path = "tach.utils"
-depends_on = []
+depends_on = [
+    { path = "tach.colors" },
+    { path = "tach.constants" },
+]
 
 [cache]
-file_dependencies = ["python/tests/**", "src/*.rs"]
+file_dependencies = [
+    "python/tests/**",
+    "src/*.rs",
+]
 
 [external]
-exclude = ["pytest"]
+exclude = [
+    "pytest",
+]
