port core to Rust: ModuleTree, ModuleCore, ast interface

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ toml = "0.8.19"
 thiserror = "1.0.63"
 serde = { version = "1.0.209", features = ["derive"] }
 glob = "0.3.1"
+petgraph = "0.6.5"
 
 [features]
 extension-module = ["pyo3/extension-module"]
