--- a/tach.toml
+++ b/tach.toml
@@ -1,17 +1,17 @@
 exclude = [
     "**/__pycache__/**",
-     "build/**",
-     "dist/**",
-     "docs/**",
-     "**/tests/**",
-     "tach.egg-info/**",
+    "**/tests/**",
+    "build/**",
+    "dist/**",
+    "docs/**",
+    "tach.egg-info/**",
 ]
-
-use_regex_matching = false
-source_roots = ["python"]
+source_roots = [
+    "python",
+]
 exact = true
-ignore_type_checking_imports = true
 forbid_circular_dependencies = true
+use_regex_matching = false
 
 [[modules]]
 path = "tach"
@@ -20,12 +20,17 @@ strict = true
 
 [[modules]]
 path = "tach.__main__"
-depends_on = [{ path = "tach.start" }]
+depends_on = [
+    { path = "tach.start" },
+]
 strict = true
 
 [[modules]]
 path = "tach.cache"
-depends_on = [{ path = "tach" }, { path = "tach.filesystem" }]
+depends_on = [
+    { path = "tach" },
+    { path = "tach.filesystem" },
+]
 strict = true
 
 [[modules]]
@@ -40,7 +45,10 @@ strict = true
 
 [[modules]]
 path = "tach.check_external"
-depends_on = [{ path = "tach.extension" }, { path = "tach.utils" }]
+depends_on = [
+    { path = "tach.extension" },
+    { path = "tach.utils" },
+]
 
 [[modules]]
 path = "tach.cli"
@@ -78,7 +86,9 @@ strict = true
 
 [[modules]]
 path = "tach.core"
-depends_on = [{ path = "tach.constants" }]
+depends_on = [
+    { path = "tach.constants" },
+]
 strict = true
 
 [[modules]]
@@ -103,17 +113,24 @@ strict = true
 
 [[modules]]
 path = "tach.filesystem.git_ops"
-depends_on = [{ path = "tach.errors" }]
+depends_on = [
+    { path = "tach.errors" },
+]
 strict = true
 
 [[modules]]
 path = "tach.hooks"
-depends_on = [{ path = "tach.constants" }]
+depends_on = [
+    { path = "tach.constants" },
+]
 strict = true
 
 [[modules]]
 path = "tach.interactive"
-depends_on = [{ path = "tach.errors" }, { path = "tach.filesystem" }]
+depends_on = [
+    { path = "tach.errors" },
+    { path = "tach.filesystem" },
+]
 strict = true
 
 [[modules]]
@@ -165,7 +182,9 @@ strict = true
 
 [[modules]]
 path = "tach.start"
-depends_on = [{ path = "tach.cli" }]
+depends_on = [
+    { path = "tach.cli" },
+]
 strict = true
 
 [[modules]]
@@ -195,7 +214,12 @@ path = "tach.utils"
 depends_on = []
 
 [cache]
-file_dependencies = ["python/tests/**", "src/*.rs"]
+file_dependencies = [
+    "python/tests/**",
+    "src/*.rs",
+]
 
 [external]
-exclude = ["pytest"]
+exclude = [
+    "pytest",
+]
