--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,11 @@ dependencies = [
     "stdlib-list>=0.10.0; python_version < '3.10'",
     "eval-type-backport>=0.2.0; python_version < '3.10' and python_version > '3.7'",
     "importlib_metadata>=6.5; python_version == '3.7'",
+    "code2flow>=2.5.1",
+    "matplotlib>=3.9.2",
+    "pillow>=10.4.0",
+    "requests>=2.32.3",
+    "pygraphviz>=1.13",
 ]
 keywords = [
     'python',
