Add unused dependencies to check-external diagnostics

--- a/tach.toml
+++ b/tach.toml
@@ -198,4 +198,4 @@ depends_on = []
 file_dependencies = ["python/tests/**", "src/*.rs"]
 
 [external]
-exclude = ["pytest"]
+exclude = ["pytest", "pydot", "eval_type_backport"]
