--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 ]
 dependencies = [
     "pyyaml~=6.0",
+    "tomli~=2.0",
     "tomli-w~=1.0",
     "pydantic~=2.0",
     "rich~=13.0",
