--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,17 +29,15 @@ classifiers = [
 ]
 dependencies = [
     "pyyaml~=6.0",
-    "tomli~=2.0",
+    "tomli>=1.2.2",
     "tomli-w~=1.0",
     "rich~=13.0",
     "prompt-toolkit~=3.0",
     "GitPython~=3.1",
-    "networkx~=3.0; python_version > '3.7'",
-    "networkx>=2.6,<4.0; python_version == '3.7'",
+    "networkx>=2.6,<4.0",
     "pydot~=2.0",
     "stdlib-list>=0.10.0; python_version < '3.10'",
-    "eval-type-backport>=0.2.0; python_version < '3.10' and python_version > '3.7'",
-    "importlib_metadata>=6.5; python_version == '3.7'",
+    "importlib_metadata>=6.0; python_version == '3.7'",
 ]
 keywords = [
     'python',
