Add positional filesystem path filtering to tach show (local only for now)

--- a/tach.toml
+++ b/tach.toml
@@ -161,8 +161,10 @@ depends_on = [
 
 [[modules]]
 path = "tach.show"
-depends_on = []
 strict = true
+depends_on = [
+    { path = "tach.filesystem" },
+]
 
 [[modules]]
 path = "tach.start"
