Support web-based show by modifying ProjectConfig in-place

--- a/tach.toml
+++ b/tach.toml
@@ -163,6 +163,7 @@ depends_on = [
 path = "tach.show"
 strict = true
 depends_on = [
+    { path = "tach.extension" },
     { path = "tach.filesystem" },
 ]
 
