--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,8 +6,9 @@
 name: Publish tach
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - internal/alpha
 
 permissions:
   contents: read
@@ -18,17 +19,17 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: ubuntu-latest
+          - runner: ubuntu-22.04
             target: x86_64
-          - runner: ubuntu-latest
+          - runner: ubuntu-22.04
             target: x86
-          - runner: ubuntu-latest
+          - runner: ubuntu-22.04
             target: aarch64
-          - runner: ubuntu-latest
+          - runner: ubuntu-22.04
             target: armv7
-          - runner: ubuntu-latest
+          - runner: ubuntu-22.04
             target: s390x
-          - runner: ubuntu-latest
+          - runner: ubuntu-22.04
             target: ppc64le
     steps:
       - uses: actions/checkout@v4
@@ -41,7 +42,7 @@ jobs:
             3.10
             3.11
             3.12
-            3.13-dev
+            3.13
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -75,7 +76,7 @@ jobs:
             3.10
             3.11
             3.12
-            3.13-dev
+            3.13
           architecture: ${{ matrix.platform.target }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
@@ -108,7 +109,7 @@ jobs:
             3.10
             3.11
             3.12
-            3.13-dev
+            3.13
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -122,7 +123,7 @@ jobs:
           path: dist
 
   sdist:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - name: Build sdist
@@ -138,8 +139,7 @@ jobs:
 
   release:
     name: Release
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-22.04
     needs: [linux, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v4
